Commit to the uberbranch

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
+		"colors.css": "^3.0.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -38,7 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"dotenv": "^16.3.1",
-		"isomorphic-dompurify": "^1.11.0"
+		"isomorphic-dompurify": "^1.11.0",
+		"lucide-svelte": "^0.294.0"
 	}
 }
