--- a/package.json
+++ b/package.json
@@ -20,19 +20,21 @@
 		"@types/node": "^20.10.3",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
-		"autoprefixer": "^10.4.14",
+		"autoprefixer": "^10.4.16",
 		"colors.css": "^3.0.0",
+		"daisyui": "^4.4.23",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.0.0",
 		"prettier-plugin-tailwindcss": "^0.4.1",
+		"sass": "^1.69.5",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-preprocess-import-assets": "^1.1.0",
-		"tailwindcss": "^3.3.2",
+		"tailwindcss": "^3.4.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
