--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,9 +2,9 @@ name: Build Container and Push to Contensis
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: [ "uberbranch" ]
   push:
-    branches: [ "master" ]
+    branches: [ "uberbranch" ]
   workflow_dispatch:
   
 env:
