--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.4",
 		"@types/node": "^20.10.3",
+		"@types/siema": "^1.4.11",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
@@ -40,6 +41,7 @@
 	"type": "module",
 	"dependencies": {
 		"isomorphic-dompurify": "^1.11.0",
-		"lucide-svelte": "^0.294.0"
+		"lucide-svelte": "^0.294.0",
+		"siema": "^1.5.1"
 	}
 }
