--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,7 @@ jobs:
     permissions: write-all
     strategy:
       matrix:
-        project-id: ['sodorparishcouncil', 'broomhillparishpouncil']
+        project-id: ['sodorparishcouncil', 'testingjosh']
 
     steps:
       #Replace any instance of SodorParishCouncil with whatever is in the matrix
