--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ format('{0}/{1}.{2}', env.IMAGE_NAME, matrix.project-id, env.IMAGE_TAGS) }}
+          tags: ${{ env.IMAGE_TAGS) }}
 
       - name: Contensis block push action
         uses: contensis/block-push@v1
@@ -57,6 +57,6 @@ jobs:
           auto-release: true
           client-id: ${{ secrets.Z_CLIENT_ID }}
           git-token: ${{ github.token }}
-          image-uri: ${{ format('{0}/{1}.{2}', env.IMAGE_NAME, matrix.project-id, env.IMAGE_TAGS) }}
+          image-uri: ${{ format('{0}/{1}:{2}', env.IMAGE_NAME, matrix.project-id, env.IMAGE_TAGS) }}
           project-id: ${{ matrix.project-id }}
           shared-secret: ${{ secrets.Z_SHARED_SECRET }}
