--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_TAGS }}
+          tags: ghcr.io/${{ github.repository }}/${{ github.ref_name }}/${{ matrix.project-id}}:${{ env.IMAGE_TAGS }}
 
       - name: Contensis block push action
         uses: contensis/block-push@v1
