--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.4",
+		"@types/glidejs__glide": "^3.6.5",
 		"@types/node": "^20.10.3",
 		"@types/siema": "^1.4.11",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -40,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@glidejs/glide": "^3.6.0",
 		"isomorphic-dompurify": "^1.11.0",
 		"lucide-svelte": "^0.294.0",
 		"siema": "^1.5.1",
